--- a/frontend/src/Components/css/about.css
+++ b/frontend/src/Components/css/about.css
@@ -132,6 +132,13 @@
        }
 }
 
+@media only screen and(max-width:400px) {
+       .card {
+              transform: rotateY(calc(var(--i)*328deg)) translateZ(125px);
+              margin: auto
+       }
+}
+
 @media screen and (max-width:1000px) {
        .aboutmeleft>p {
               font-size: 4.2vw;
